ovhcloud-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: battletech-campaigner
  labels:
    name: battletech-campaigner
